Fixed #4
Replaced header with a new header. The sidebar button now overlaps with the site name in the header when the screen is really small.

--- a/style.css
+++ b/style.css
@@ -886,13 +886,13 @@ a:focus {
 .secondary-toggle {
 	background-color: transparent;
 	border: 1px solid #eaeaea;
-	border: 1px solid rgba(51, 51, 51, 0.1);
+	border: 1px solid rgb(231, 231, 231,0.7);
 	height: 42px;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
 	top: 50%;
-	right: 0;
+	right: 0.5%;
 	text-align: center;
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
@@ -901,7 +901,7 @@ a:focus {
 }
 
 .secondary-toggle:before {
-	color: #333;
+	color: #ffffff;
 	content: "\f419";
 	line-height: 40px;
 	width: 40px;
@@ -911,7 +911,7 @@ a:focus {
 .secondary-toggle:focus {
 	background-color: transparent;
 	border: 1px solid #c1c1c1;
-	border: 1px solid rgba(51, 51, 51, 0.3);
+    border: 1px solid rgb(231, 231, 231,1.0);
 	outline: 0;
 }
 
@@ -5642,26 +5642,21 @@ p > video {
 
 
 .header{
-    /*width: 70.5882%;*/
-    width: 95%;
-    margin-left: 3.52941%;
-    margin-right: 1.47059%;
-    /*height: 150px;*/
+    width: 100%;
+    /*margin-left: 3.52941%;
+    margin-right: 1.47059%;*/
     display: block;
     float: left;
-    background-color: #ffffff;
+    background-color: #000000;
     /*padding: 5.0000%;*/
     position:relative;
+    overflow:hidden;
 }
 
 .header-img{
-    width: 70.5882%;
-
-    margin-top: 6%;
+    width: 100%;
     float:left;
     display:block;
-    position: absolute;
-    bottom: 1%;
 }
 
 
@@ -5726,6 +5721,10 @@ img.center {
 }
 
 .cat-image h2 span.spacer {
+    padding:0 5px;
+}
+
+.header span.spacer {
     padding:0 5px;
 }
 
